# fairshift-demo

./: README.md  pom.xml
.github/workflows/: pull_request_maven.yml  pull_request_maven_long_running.yml  release.yml
backend/: app.py  engine.py
data/: employees.json
java/: README.MD
java/bed-allocation/: pom.xml
java/conference-scheduling/: pom.xml
java/employee-scheduling/: pom.xml
java/facility-location/: pom.xml
java/flight-crew-scheduling/: pom.xml
java/food-packaging/: pom.xml
java/hello-world/: build.gradle  pom.xml
java/maintenance-scheduling/: pom.xml
java/meeting-scheduling/: pom.xml
java/order-picking/: pom.xml
java/project-job-scheduling/: pom.xml
java/school-timetabling/: build.gradle  pom.xml
java/sports-league-scheduling/: pom.xml
java/spring-boot-integration/: build.gradle  pom.xml
java/task-assigning/: pom.xml
java/tournament-scheduling/: pom.xml
java/vehicle-routing/: README.MD  pom.xml
kotlin/school-timetabling/: pom.xml
python/employee-scheduling/: README.MD  pyproject.toml
python/flight-crew-scheduling/: README.adoc  pyproject.toml
python/hello-world/: pyproject.toml
python/school-timetabling/: pyproject.toml
python/tournament-scheduling/: README.adoc  pyproject.toml
python/tournament-scheduling/src/tournament_scheduling/: __init__.py  constraints.py  demo_data.py  domain.py  json_serialization.py  rest_api.py  score_analysis.py  solver.py
python/tournament-scheduling/static/: app.js  index.html
python/tournament-scheduling/tests/: test_constraints.py  test_feasible.py
(+63 files in other folders)
